--- a/SMJobBlessApp/SMJobBlessApp-Info.plist
+++ b/SMJobBlessApp/SMJobBlessApp-Info.plist
@@ -23,7 +23,7 @@
 	<key>SMPrivilegedExecutables</key>
 	<dict>
 		<key>com.apple.bsd.SMJobBlessHelper</key>
-		<string>identifier com.apple.bsd.SMJobBlessHelper and certificate leaf[subject.CN] = &quot;Joe Developer&quot;</string>
+		<string>identifier com.apple.bsd.SMJobBlessHelper and certificate leaf[subject.CN] = &quot;${CODE_SIGN_IDENTITY}&quot;</string>
 	</dict>
 </dict>
 </plist>
