--- a/SMJobBlessHelper/SMJobBlessHelper-Info.plist
+++ b/SMJobBlessHelper/SMJobBlessHelper-Info.plist
@@ -3,16 +3,16 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.bsd.SMJobBlessHelper</string>
+	<string>com.elegantchaos.neu</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>SMJobBlessHelper</string>
+	<string>helper</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>identifier com.apple.bsd.SMJobBlessApp and certificate leaf[subject.CN] = &quot;${CODE_SIGN_IDENTITY}&quot;</string>
+		<string>identifier com.elegantchaos.neu and certificate leaf[subject.CN] = &quot;3rd Party Mac Developer Application: Sam Deane&quot;</string>
 	</array>
 </dict>
 </plist>
