--- a/SMJobBlessHelper/SMJobBlessHelper-Launchd.plist
+++ b/SMJobBlessHelper/SMJobBlessHelper-Launchd.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>Label</key>
-	<string>com.apple.bsd.SMJobBlessHelper</string>
+	<string>com.elegantchaos.neu</string>
 </dict>
 </plist>
