work in progress on better variable expansion

--- a/SMJobBlessHelper/SMJobBlessHelper-Info.plist
+++ b/SMJobBlessHelper/SMJobBlessHelper-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>helper</string>
+	<string>HELPER_NAME</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>SMAuthorizedClients</key>
