--- a/SMJobBlessHelper/Processed-Info.plist
+++ b/SMJobBlessHelper/Processed-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>${HELPER_ID}</string>
+	<string>com.elegantchaos.neu.helper</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -12,7 +12,7 @@
 	<string>1.0</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>identifier ${HELPER_ID} and certificate leaf[subject.CN] = &quot;${HELPER_SIGNING}&quot;</string>
+		<string>identifier com.elegantchaos.neu.helper and certificate leaf[subject.CN] = &quot;3rd Party Mac Developer Application: Sam Deane&quot;</string>
 	</array>
 </dict>
 </plist>
