work in progress

--- a/SMJobBlessHelper/SMJobBlessHelper-Info.plist
+++ b/SMJobBlessHelper/SMJobBlessHelper-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>${HELPER_NAME}</string>
+	<string>${HELPER_ID}</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>SMAuthorizedClients</key>
