--- a/SMJobBlessApp/SMJobBlessApp-Info.plist
+++ b/SMJobBlessApp/SMJobBlessApp-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>${HELPER_ID}</string>
+	<string>com.elegantchaos.neu.test</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
