--- a/Helper/Processed-Launchd.plist
+++ b/Helper/Processed-Launchd.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>Label</key>
-	<string>com.elegantchaos.neu.helper</string>
+	<string>com.elegantchaos.helper.helper</string>
 </dict>
 </plist>
