--- a/Host/Processed-Info.plist
+++ b/Host/Processed-Info.plist
@@ -22,8 +22,8 @@
 	<string>NSApplication</string>
 	<key>SMPrivilegedExecutables</key>
 	<dict>
-		<key>com.elegantchaos.neu.helper</key>
-		<string>identifier com.elegantchaos.neu.helper and certificate leaf[subject.CN] = &quot;3rd Party Mac Developer Application: Sam Deane&quot;</string>
+		<key>com.elegantchaos.helper.helper</key>
+		<string>identifier com.elegantchaos.helper.helper and certificate leaf[subject.CN] = &quot;3rd Party Mac Developer Application: Sam Deane&quot;</string>
 	</dict>
 </dict>
 </plist>
