--- a/Helper/Launchd.plist
+++ b/Helper/Launchd.plist
@@ -8,6 +8,10 @@
 	<true/>
 	<key>OnDemand</key>
 	<true/>
+	<key>WatchPaths</key>
+	<array>
+		<string>/var/tmp/test.socket</string>
+	</array>
 	<key>MachServices</key>
 	<dict>
 		<key>${HELPER_ID}</key>
