--- a/Helper/Processed-Launchd.plist
+++ b/Helper/Processed-Launchd.plist
@@ -4,20 +4,19 @@
 <dict>
 	<key>Label</key>
 	<string>com.elegantchaos.helper.helper</string>
-	<key>ServiceIPC</key>
-	<true/>
-	<key>OnDemand</key>
-	<true/>
-	<key>Listeners</key>
+	<key>Sockets</key>
 	<dict>
-		<key>SockFamily</key>
-		<string>Unix</string>
-		<key>SockPathName</key>
-		<string>/var/tmp/com.elegantchaos.helper.helper</string>
-		<key>SockPathMode</key>
-		<string>438</string>
-		<key>SockType</key>
-		<string>Stream</string>
+		<key>com.elegantchaos.helper.helper</key>
+		<dict>
+			<key>SockFamily</key>
+			<string>Unix</string>
+			<key>SockPathName</key>
+			<string>/var/tmp/com.elegantchaos.helper.helper</string>
+			<key>SockPathMode</key>
+			<integer>438</integer>
+			<key>SockType</key>
+			<string>Stream</string>
+		</dict>
 	</dict>
 </dict>
 </plist>
