--- a/Helper/Processed-Launchd.plist
+++ b/Helper/Processed-Launchd.plist
@@ -4,19 +4,14 @@
 <dict>
 	<key>Label</key>
 	<string>com.elegantchaos.helper.helper</string>
-	<key>Sockets</key>
+	<key>ServiceIPC</key>
+	<true/>
+	<key>OnDemand</key>
+	<true/>
+	<key>MachServices</key>
 	<dict>
 		<key>com.elegantchaos.helper.helper</key>
-		<dict>
-			<key>SockFamily</key>
-			<string>Unix</string>
-			<key>SockPathName</key>
-			<string>/var/tmp/com.elegantchaos.helper.helper</string>
-			<key>SockPathMode</key>
-			<integer>438</integer>
-			<key>SockType</key>
-			<string>Stream</string>
-		</dict>
+		<true/>
 	</dict>
 </dict>
 </plist>
