--- a/Settings.xcconfig
+++ b/Settings.xcconfig
@@ -22,4 +22,4 @@ HOST_ID = com.elegantchaos.helper.host
 HELPER_SIGNING = 3rd Party Mac Developer Application: Sam Deane
 
 // Set this to Mach to use mach ports, or Sockets to use unix sockets
-HELPER_METHOD = Sockets
+HELPER_METHOD = Mach
