--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ECFoundation"]
 	path = ECFoundation
-	url = https://github.com/samdeane/ECFoundation
+	url = git@github.com:elegantchaos/ECFoundation
